# fresco

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
fresco/: asgi.py  settings.py  urls.py  wsgi.py
fresco/apps/recipes/: apps.py  models.py  module.py
fresco/apps/recipes/application/schemas/: recipe.py
fresco/apps/recipes/application/services/: recipes_service.py
fresco/apps/recipes/domain/: recipe.py  recipe_ingredient.py  units.py
fresco/apps/recipes/domain/models/: ingredient.py  recipe.py  recipe_ingredient.py
fresco/apps/recipes/domain/repositories/: recipe_ingredient_repository.py  recipe_repository.py
fresco/apps/recipes/infrastructure/controllers/: recipes_controller.py
fresco/apps/recipes/infrastructure/persistence/: postgres_recipe_repository.py
fresco/apps/recipes/migrations/: 0001_initial.py  0002_rename_time_recipe_estimated_time.py  0003_alter_recipeingredient_unit.py
fresco/tests/recipes/e2e/: recipes_controller_tests.py
fresco/tests/recipes/helpers/: repositories.py
fresco/tests/recipes/unit_tests/: models_tests.py  services_tests.py
openapi/: openapi.json
