[tool.poetry]
name = "fresco"
version = "0.1.0"
description = "Basic API with boilerplate"
authors = ["Sergio Baeza <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
black = "^23.7.0"
pre-commit = "^3.3.3"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
